# Mes_comptes

./: .env.example  .gitignore  CHANGELOG.md  generateur-info-video.html  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: architecture-dry.mdc  core-langue.mdc  cross-platform.mdc  git-workflow.mdc  react-ui.mdc  styles.mdc  supabase.mdc
.github/workflows/: build.yml  release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/signing/: mes-comptes.key.pub
src-tauri/src/: lib.rs  main.rs
src/components/common/: UpdateBanner.css  UpdateBanner.tsx
src/components/layout/: AppLayout.css  AppLayout.tsx
src/hooks/: useAppUpdater.ts
src/lib/: appVersion.ts  platform.ts  supabaseClient.ts
src/pages/: HomePage.css  HomePage.tsx
src/services/platform/: updateService.ts
src/styles/: global.css  tokens.css
