[package]
name = "mes-comptes"
version = "0.1.1"
description = "Mes Comptes — suivi de comptes et finances par profil utilisateur"
authors = ["Rory Mercury 91"]
edition = "2021"

[lib]
name = "mes_comptes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
